make-a-wish-salesforce/src/objects/Awards_Recognition__c.object
<CustomObject>
    <fields>
        <fullName>Award_Name__c</fullName>
        <description>This Field describe Award Name</description>
        <label>Award Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Award_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airport Greeter of the Year</fullName>
                </value>
                <value>
                    <fullName>Behind the Scenes Award</fullName>
                </value>
                <value>
                    <fullName>Estrella Award</fullName>
                </value>
                <value>
                    <fullName>Helping Hand Award</fullName>
                </value>
                <value>
                    <fullName>Make-A-Wish Value Awards</fullName>
                </value>
                <value>
                    <fullName>Mentor of the Year</fullName>
                </value>
                <value>
                    <fullName>Peer on the Spot Recognition</fullName>
                </value>
                <value>
                    <fullName>Rising Star Award</fullName>
                </value>
                <value>
                    <fullName>Volunteer of the Month</fullName>
                </value>
                <value>
                    <fullName>Volunteer of the Year</fullName>
                </value>
                <value>
                    <fullName>Wish Granter of the Month</fullName>
                </value>
                <value>
                    <fullName>Wish Granter of the Year</fullName>
                </value>
                <value>
                    <fullName>Wishmaker Award</fullName>
                </value>
                <value>
                    <fullName>Completion of Training</fullName>
                </value>
                <value>
                    <fullName>1st Assignment</fullName>
                </value>
                <value>
                    <fullName>5th Assignment</fullName>
                </value>
                <value>
                    <fullName>10th Assignment</fullName>
                </value>
                <value>
                    <fullName>15th Assignment</fullName>
                </value>
                <value>
                    <fullName>20th Assignment</fullName>
                </value>
                <value>
                    <fullName>25th Assignment</fullName>
                </value>
                <value>
                    <fullName>50th Assignment</fullName>
                </value>
                <value>
                    <fullName>Collegiate Recognition</fullName>
                </value>
                <value>
                    <fullName>Daily Points of Light Award</fullName>
                </value>
                <value>
                    <fullName>Hometown Award</fullName>
                </value>
                <value>
                    <fullName>Make-A-Wish America Volunteer of the Year</fullName>
                </value>
                <value>
                    <fullName>State Commission on Volunteerism Award</fullName>
                </value>
                <value>
                    <fullName>Presidential Service Award – Bronze</fullName>
                </value>
                <value>
                    <fullName>Presidential Service Award – Gold</fullName>
                </value>
                <value>
                    <fullName>Presidential Service Award – Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Award_Type__c</fullName>
        <description>This describe field type of Award</description>
        <label>Award Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chapter Recognition</fullName>
                </value>
                <value>
                    <fullName>Community Recognition</fullName>
                </value>
                <value>
                    <fullName>Chapter Task Recognition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This describes the Chapter Name</description>
        <label>Chapter Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Awards &amp; Recognitions</relationshipLabel>
        <relationshipName>Awards_Recognitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>General comment given by user</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Field__c</fullName>
        <description>This Date field referred for date of award given.</description>
        <label>Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External id  fields</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <description>It describe the import id for the records</description>
        <label>Import Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicates records are migrated one or not.</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RE_Award_Name__c</fullName>
        <description>AWARD_CODE</description>
        <label>RE Award Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Awards_Recognition_Name__c</fullName>
        <description>AWARD_CODE</description>
        <label>RE Awards &amp; Recognition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Comment__c</fullName>
        <description>COMMENTS</description>
        <label>RE Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Date_Field__c</fullName>
        <description>DATE_AWARD</description>
        <label>RE Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_ID__c</fullName>
        <description>ID, IMPORT_ID</description>
        <label>RE Import ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This look field used for the getting volunteer contact</description>
        <label>Volunteer Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Volunteer Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Awards &amp; Recognitions</relationshipLabel>
        <relationshipName>Awards_Recognitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Awards &amp; Recognition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AW-{0000}</displayFormat>
        <label>Awards &amp; Recognition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awards &amp; Recognitions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>